rails action_text:install

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,9 +16,11 @@
     <%= form.text_field :title %>
   </div>
 
+  <%= post.content %>
+
   <div class="field">
     <%= form.label :content %>
-    <%= form.text_area :content %>
+    <%= form.rich_text_area :content %>
   </div>
 
   <div class="actions">
